--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "bh-frontend",
-  "version": "0.1.0",
+  "name": "borna-hoosh-frontend",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.12.2",
-    "lucide-react": "^0.546.0",
-    "next": "15.5.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-hook-form": "^7.65.0",
-    "zustand": "^5.0.8"
+    "@tailwindcss/postcss": "^4.1.14",
+    "axios": "^1.7.3",
+    "lucide-react": "^0.446.0",
+    "next": "14.2.33",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-hook-form": "^7.53.0",
+    "typescript": "^5.6.3",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.6",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@types/node": "^22.7.5",
+    "@types/react": "^18.3.10",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.33",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.14"
   }
 }
