--- a/package.json
+++ b/package.json
@@ -22,10 +22,7 @@
   "devDependencies": {
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.10",
-    "autoprefixer": "^10.4.21",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.33",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.14"
+    "eslint-config-next": "14.2.33"
   }
 }
